; ModuleID = '/home/carl/AnghaBench/openssl/demos/cms/extr_cms_sign.c_main.c'
source_filename = "/home/carl/AnghaBench/openssl/demos/cms/extr_cms_sign.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CMS_DETACHED = common dso_local global i32 0, align 4
@CMS_STREAM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"signer.pem\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"r\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"sign.txt\00", align 1
@.str.3 = private unnamed_addr constant [10 x i8] c"smout.txt\00", align 1
@.str.4 = private unnamed_addr constant [2 x i8] c"w\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [20 x i8] c"Error Signing Data\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32* null, i32** %6, align 8
  store i32* null, i32** %7, align 8
  store i32* null, i32** %8, align 8
  store i32* null, i32** %9, align 8
  store i32* null, i32** %10, align 8
  store i32* null, i32** %11, align 8
  store i32 1, i32* %12, align 4
  %14 = load i32, i32* @CMS_DETACHED, align 4
  %15 = load i32, i32* @CMS_STREAM, align 4
  %16 = or i32 %14, %15
  store i32 %16, i32* %13, align 4
  %17 = call i32 (...) @OpenSSL_add_all_algorithms()
  %18 = call i32 (...) @ERR_load_crypto_strings()
  %19 = call i32* @BIO_new_file(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i32* %19, i32** %8, align 8
  %20 = load i32*, i32** %8, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %23, label %22

22:                                               ; preds = %2
  br label %72

23:                                               ; preds = %2
  %24 = load i32*, i32** %8, align 8
  %25 = call i32* @PEM_read_bio_X509(i32* %24, i32* null, i32 0, i32* null)
  store i32* %25, i32** %9, align 8
  %26 = load i32*, i32** %8, align 8
  %27 = call i32 @BIO_reset(i32* %26)
  %28 = load i32*, i32** %8, align 8
  %29 = call i32* @PEM_read_bio_PrivateKey(i32* %28, i32* null, i32 0, i32* null)
  store i32* %29, i32** %10, align 8
  %30 = load i32*, i32** %9, align 8
  %31 = icmp ne i32* %30, null
  br i1 %31, label %32, label %35

32:                                               ; preds = %23
  %33 = load i32*, i32** %10, align 8
  %34 = icmp ne i32* %33, null
  br i1 %34, label %36, label %35

35:                                               ; preds = %32, %23
  br label %72

36:                                               ; preds = %32
  %37 = call i32* @BIO_new_file(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i32* %37, i32** %6, align 8
  %38 = load i32*, i32** %6, align 8
  %39 = icmp ne i32* %38, null
  br i1 %39, label %41, label %40

40:                                               ; preds = %36
  br label %72

41:                                               ; preds = %36
  %42 = load i32*, i32** %9, align 8
  %43 = load i32*, i32** %10, align 8
  %44 = load i32*, i32** %6, align 8
  %45 = load i32, i32* %13, align 4
  %46 = call i32* @CMS_sign(i32* %42, i32* %43, i32* null, i32* %44, i32 %45)
  store i32* %46, i32** %11, align 8
  %47 = load i32*, i32** %11, align 8
  %48 = icmp ne i32* %47, null
  br i1 %48, label %50, label %49

49:                                               ; preds = %41
  br label %72

50:                                               ; preds = %41
  %51 = call i32* @BIO_new_file(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.4, i64 0, i64 0))
  store i32* %51, i32** %7, align 8
  %52 = load i32*, i32** %7, align 8
  %53 = icmp ne i32* %52, null
  br i1 %53, label %55, label %54

54:                                               ; preds = %50
  br label %72

55:                                               ; preds = %50
  %56 = load i32, i32* %13, align 4
  %57 = load i32, i32* @CMS_STREAM, align 4
  %58 = and i32 %56, %57
  %59 = icmp ne i32 %58, 0
  br i1 %59, label %63, label %60

60:                                               ; preds = %55
  %61 = load i32*, i32** %6, align 8
  %62 = call i32 @BIO_reset(i32* %61)
  br label %63

63:                                               ; preds = %60, %55
  %64 = load i32*, i32** %7, align 8
  %65 = load i32*, i32** %11, align 8
  %66 = load i32*, i32** %6, align 8
  %67 = load i32, i32* %13, align 4
  %68 = call i32 @SMIME_write_CMS(i32* %64, i32* %65, i32* %66, i32 %67)
  %69 = icmp ne i32 %68, 0
  br i1 %69, label %71, label %70

70:                                               ; preds = %63
  br label %72

71:                                               ; preds = %63
  store i32 0, i32* %12, align 4
  br label %72

72:                                               ; preds = %71, %70, %54, %49, %40, %35, %22
  %73 = load i32, i32* %12, align 4
  %74 = icmp ne i32 %73, 0
  br i1 %74, label %75, label %80

75:                                               ; preds = %72
  %76 = load i32, i32* @stderr, align 4
  %77 = call i32 @fprintf(i32 %76, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.5, i64 0, i64 0))
  %78 = load i32, i32* @stderr, align 4
  %79 = call i32 @ERR_print_errors_fp(i32 %78)
  br label %80

80:                                               ; preds = %75, %72
  %81 = load i32*, i32** %11, align 8
  %82 = call i32 @CMS_ContentInfo_free(i32* %81)
  %83 = load i32*, i32** %9, align 8
  %84 = call i32 @X509_free(i32* %83)
  %85 = load i32*, i32** %10, align 8
  %86 = call i32 @EVP_PKEY_free(i32* %85)
  %87 = load i32*, i32** %6, align 8
  %88 = call i32 @BIO_free(i32* %87)
  %89 = load i32*, i32** %7, align 8
  %90 = call i32 @BIO_free(i32* %89)
  %91 = load i32*, i32** %8, align 8
  %92 = call i32 @BIO_free(i32* %91)
  %93 = load i32, i32* %12, align 4
  ret i32 %93
}

declare dso_local i32 @OpenSSL_add_all_algorithms(...) #1

declare dso_local i32 @ERR_load_crypto_strings(...) #1

declare dso_local i32* @BIO_new_file(i8*, i8*) #1

declare dso_local i32* @PEM_read_bio_X509(i32*, i32*, i32, i32*) #1

declare dso_local i32 @BIO_reset(i32*) #1

declare dso_local i32* @PEM_read_bio_PrivateKey(i32*, i32*, i32, i32*) #1

declare dso_local i32* @CMS_sign(i32*, i32*, i32*, i32*, i32) #1

declare dso_local i32 @SMIME_write_CMS(i32*, i32*, i32*, i32) #1

declare dso_local i32 @fprintf(i32, i8*) #1

declare dso_local i32 @ERR_print_errors_fp(i32) #1

declare dso_local i32 @CMS_ContentInfo_free(i32*) #1

declare dso_local i32 @X509_free(i32*) #1

declare dso_local i32 @EVP_PKEY_free(i32*) #1

declare dso_local i32 @BIO_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
